--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@web5/dids": "^0.2.4"
   },
   "devDependencies": {
+    "@types/node": "^20.10.7",
     "dotenv": "^16.3.1",
     "nodemon": "^3.0.2",
     "typescript": "^5.3.3"
@@ -20,6 +21,6 @@
   "scripts": {
     "compile": "tsc",
     "compile:watch": "tsc -w",
-    "run": "node ./dist/index.js"
+    "dev": "node ./dist/index.js"
   }
 }
