--- a/package.json
+++ b/package.json
@@ -7,20 +7,25 @@
   "author": "biggaji <tobiajibade2017@yandex.com>",
   "license": "MIT",
   "dependencies": {
-    "@web5/api": "^0.8.3",
     "@web5/credentials": "^0.4.1",
     "@web5/dids": "^0.2.4"
   },
   "devDependencies": {
-    "@types/node": "^20.10.7",
-    "dotenv": "^16.3.1",
-    "nodemon": "^3.0.2",
     "typescript": "^5.3.3"
   },
   "type": "module",
+  "keywords": [
+    "web5",
+    "vc",
+    "verifiable",
+    "credentials",
+    "tbd",
+    "did",
+    "biggaji",
+    "oxwware"
+  ],
   "scripts": {
     "compile": "tsc",
-    "compile:watch": "tsc -w",
-    "dev": "node ./dist/index.js"
+    "compile:watch": "tsc -w"
   }
 }
